# FecundMare

./: .gitignore  .pre-commit-config.yaml  .scalafmt.conf  Justfile  LICENSE  README.md  build.mill  quartz.config.yaml  quartz.lock.json
.github/workflows/: deploy.yml  perf.yaml
MemoryAnalyzer/: LICENSE  Project.toml  README.md
MemoryAnalyzer/src/: MemoryAnalyzer.jl
MemoryAnalyzer/test/: runtests.jl
content/: index.md  weekly-news.md
content/blogs/: 2026-06-08-muldivinst.md
fecundmare/src/: CSR.scala  EXU.scala  FecundMare.scala  FecundMareConfig.scala  HaltUnit.scala  ICache.scala  IFU.scala  LSU.scala  RegisterFile.scala  (+3 more)
formal/: ICache.sby
micro-sim/: .gitignore  Cargo.toml
micro-sim/src/: main.rs
perf-archive/: taohe-perf-0-27b64408.toml  taohe-perf-1-b0ee7524.toml  taohe-perf-10-d4c6848e.toml  taohe-perf-11-aa4759b8.toml  taohe-perf-12-92b41ba1.toml  taohe-perf-13-e6a66949.toml  taohe-perf-2-0d97cbc3.toml  taohe-perf-3-6149921a.toml  taohe-perf-4-2ed6540c.toml  taohe-perf-5-2ed6540c.toml  taohe-perf-6-c7c7e58a.toml  taohe-perf-7-b069e674.toml  taohe-perf-8-773d34b8.toml  taohe-perf-9-0a1bc67e.toml
results/: 0000-754ddc4.toml  0001-a5910ce.toml  0002-005eb33.toml  0003-77f14ea.toml  0004-77f14ea.toml  0005-d1adc35.toml  0006-639aad2.toml  0007-7651b03.toml  0008-e6be03f.toml  0009-ed6bfab.toml  0010-b9e23ce.toml  0011-3a2ef5f.toml  0012-89a813c.toml  0013-18970d3.toml  0014-67a5f36.toml  0015-c529a58.toml  0016-f563e3e.toml  0017-a933c78.toml  0018-a85e67f.toml  0019-d94bc23-baseline.toml  0019-d94bc23.toml  0021-f394827.toml  0022-7105420.toml
(+85 files in other folders)
